# template-math

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchGTest.cmake  MSVCHotReload.cmake  Prelude.cmake
include/: template_math.h
test/: CMakeLists.txt  test_add.cc  test_div.cc  test_sub.cc  test_tval.cc
